prevent long names from causing float wrap weirdness

--- a/packrat/styles/friend_card.css
+++ b/packrat/styles/friend_card.css
@@ -1,6 +1,6 @@
 .kifi-kcard:last-child { /* :last-child for specificity boost (always matches) */
   position: absolute;
-  width: 300px;
+  min-width: 300px;
   background-color: #fff;
   color: #faf9f9;
   box-shadow: 2px 5px 12px rgba(0,0,0,.3);
@@ -33,16 +33,11 @@
   border-top-color: #f2f2f2;
 }
 .kifi-kcard .kifi-kcard-top {
-  padding: 20px 0px;
-}
-.kifi-kcard .kifi-kcard-top::after {
-  content: " ";
-  display: block;
-  visibility: hidden;
-  font-size: 0;
-  clear: left;
+  display: table;
+  padding: 20px 14px;
 }
 .kifi-kcard .kifi-kcard-pic {
+  display: table-cell;
   box-sizing: content-box;
   height: 100px;
   width: 100px;
@@ -50,10 +45,11 @@
   background-color: #fff;
   border: 2px solid #dbdbdb;
   float: left;
-  margin: 0 14px;
 }
 .kifi-kcard .kifi-kcard-info {
-  float: left;
+  display: table-cell;
+  vertical-align: top;
+  padding-left: 14px;
   font-size: 12px;
   color: #808080;
 }
